[gd_scene load_steps=15 format=2]

[ext_resource path="res://addons/tilt-five/scenes/T5Manager.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://grid.png" type="Texture" id=5]
[ext_resource path="res://fonts/Montserrat-Medium.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://ScoreLabel.gd" type="Script" id=7]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 5, 1, 5 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 10, 2, 10 )

[sub_resource type="SpatialMaterial" id=6]
albedo_texture = ExtResource( 5 )
uv1_scale = Vector3( 40, 30, 1 )

[sub_resource type="Curve3D" id=3]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, -2.14926, 0, -2.19575, 0, 0, 0, 0, 0, 0, 2.22845, 0, -2.15117, 0, 0, 0, 0, 0, 0, 2.17495, 0, 2.2087, 0, 0, 0, 0, 0, 0, -2.22058, 0, 2.16412, 0, 0, 0, 0, 0, 0, -2.14926, 0, -2.19575 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0 )
}

[sub_resource type="CylinderMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.941176, 0.588235, 0.0313726, 1 )

[sub_resource type="DynamicFont" id=7]
size = 20
outline_size = 1
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[node name="Main" type="Spatial"]
script = ExtResource( 2 )
player_scene = ExtResource( 4 )
mob_scene = ExtResource( 3 )

[node name="T5Manager" parent="." instance=ExtResource( 1 )]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ARVROrigin" type="ARVROrigin" parent="."]
world_scale = 6.0

[node name="ARVRCamera" type="ARVRCamera" parent="ARVROrigin"]
fov = 48.0
far = 1600.0

[node name="ARVRController" type="ARVRController" parent="ARVROrigin"]

[node name="Ground" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
mesh = SubResource( 2 )
material/0 = SubResource( 6 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.944307, -0.112304, 0.309308, -0.23896, 0.412199, 0.879199, -0.226234, -0.904146, 0.362406, 0.221033, 0.823699, 0.486644 )

[node name="SpawnPath" type="Path" parent="."]
curve = SubResource( 3 )

[node name="SpawnLocation" type="PathFollow" parent="SpawnPath"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.14926, 0, -2.19575 )

[node name="Cylinders" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Cylinders"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -2.17152, 0, -2.19149 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="MeshInstance2" type="MeshInstance" parent="Cylinders"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 2.18835, 0, -2.14691 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="MeshInstance3" type="MeshInstance" parent="Cylinders"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -2.17152, 0, 2.18622 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="MeshInstance4" type="MeshInstance" parent="Cylinders"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 2.18835, 0, 2.2308 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="UserInterface" type="Spatial" parent="."]

[node name="ScoreLabel" type="Label3D" parent="UserInterface"]
transform = Transform( 1, 0, 0, 0, 0.62561, 0.780136, 0, -0.780136, 0.62561, -1.59735, 0.319922, 2.04865 )
text = "Score: 0"
font = SubResource( 7 )
horizontal_alignment = 0
script = ExtResource( 7 )

[node name="Start" type="Label3D" parent="UserInterface"]
transform = Transform( 1, 0, 0, 0, 0.62561, 0.780136, 0, -0.780136, 0.62561, 0, 0.66254, 0.913161 )
text = "A button to start
Tilt Five button to exit"
font = SubResource( 7 )
script = ExtResource( 7 )

[connection signal="glasses_available" from="T5Manager" to="." method="_on_T5Manager_glasses_available"]
[connection signal="glasses_reserved" from="T5Manager" to="." method="_on_T5Manager_glasses_reserved"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
